AC_INIT([msscf CFSec RAM Loader],2.13.11193,[msobkow@sasktel.net],[libcfsecramloader],[http://msscf.org/])
AC_COPYRIGHT([Copyright (c) 2020 Mark Stephen Sobkow])
AC_REVISION(2.13.11193)
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CXX()
LT_INIT([shared])
AC_DISABLE_STATIC
AC_CONFIG_FILES([
	Makefile
])
AC_CONFIG_MACRO_DIRS([m4])
AC_OUTPUT
