AC_INIT([msscf CFSec],2.13.11195,[msobkow@sasktel.net],[libcfsec],[http://msscf.org/])
AC_COPYRIGHT([Copyright (c) 2020 Mark Stephen Sobkow])
AC_REVISION(2.13.11195)
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CXX()
LT_INIT([shared])
AC_DISABLE_STATIC
AC_CONFIG_FILES([
	Makefile
])
AC_CONFIG_MACRO_DIRS([m4])
AC_OUTPUT
